--- a/app/views/blocks/edit.html.erb
+++ b/app/views/blocks/edit.html.erb
@@ -7,7 +7,7 @@
     <%= f.text_area :snippet %><br />
 
     <label>Mark as private</label>
-    <%= f.check_box :private %><br />
+    <%= f.check_box :is_private %><br />
   </fieldset>
   <p>
     <%= f.submit 'Update' %>, <%= link_to 'Show', @block %> or <%= link_to 'Cancel', blocks_path %>
