--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -4,16 +4,13 @@
   <table id="hor-minimalist-b">
     <% @blocks.each do |block| %>
       <tr>
-        <td><pre><%= h truncate(block.snippet,:length => 10) %></pre></td>
+        <td><pre><%= h truncate(block.snippet,:length => 20) %></pre></td>
         <td>
           <%= 'This snippet is private.' if block.is_private %>
         </td>
-        <td><%= link_to 'Show', block %></td>
         <td>
-          <% if block.signature == cookies[:signature] %>
-            <%= link_to('Edit', edit_block_path(block)) %> or
-            <%= link_to 'Destroy', block, :confirm => 'Are you sure?', :method => :delete %>
-          <% end %>
+          <%= link_to 'Show', block %>
+          <%= 'or ' + link_to('Edit', edit_block_path(block)) if block.signature == cookies[:signature] %>
         </td>
       </tr>
     <% end %>
