--- a/app/views/blocks/new.html.erb
+++ b/app/views/blocks/new.html.erb
@@ -11,6 +11,6 @@
     <%= f.check_box :is_private %><br />
   </fieldset>
   <p>
-    <%= f.submit 'Create' %> or <%= link_to 'Cancel', blocks_path %>
+    &larr; <%= link_to 'Go Back', blocks_path %> or <%= f.submit 'Create' %>
   </p>
 <% end %>
