--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Pastie Blockie: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold',"styles" %>
+  <%= stylesheet_link_tag 'scaffold','pagination',"styles" %>
 </head>
 <body>
   <div id="header">
