--- a/app/views/revisions/show.html.erb
+++ b/app/views/revisions/show.html.erb
@@ -1,15 +1,19 @@
 <p>
-  <pre><%= h @revision.snippet %></pre>
+  Language: <strong><%= @revision.block.language.name %></strong>
+</p>
+
+<p>
+  <br /><pre><%= h @revision.snippet %></pre>
 </p>
 
 <% if @block.is_private %>
   <p>
-    This code snippet is marked as <strong>PRIVATE</strong>.
+    This code snippet is marked as <strong>private</strong>.
   </p>
 <% end %>
 
 <% unless @block.revisions.empty? || @block.revisions.size == 1 %>
-  <p>Previous revisions of this snippet:</p>
+  <p><br />Previous revisions of this snippet:</p>
   <ul>
     <% @block.revisions.each do |revision| %>
       <li><%= link_to_unless_current revision.created_at, block_revision_path(@block, revision) %></li>
@@ -18,6 +22,11 @@
 <% end %>
 
 <p>
-  &larr; <%= link_to 'Go Back', blocks_path %>  
-  <%= 'or ' + link_to('Edit', edit_block_revision_path(@block, @revision)) if @block.signature == cookies[:signature] %> 
+  &larr; <%= link_to 'Go Back', blocks_path %>
+  <% if @block.signature == cookies[:signature] %>
+    ,
+    <%= link_to('Edit', edit_block_revision_path(@block, @revision)) %>
+    or
+    <%= link_to 'Destroy', [@block, @revision], :confirm => 'Are you sure?', :method => :delete %>
+  <% end %>
 </p>
