--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -7,6 +7,9 @@
   <table id="hor-minimalist-b">
     <% @blocks.each do |block| %>
       <tr>
+        <td>
+          <%= h block.language.name %>
+        </td>
         <td><pre><%= h truncate(block.latest_revision.snippet,:length => 20) %></pre></td>
         <td>
           <%= 'This snippet is private.' if block.is_private %>
