added functional tests for Blocks controller; minor refactoring elsewhere

--- a/app/views/blocks/show.html.erb
+++ b/app/views/blocks/show.html.erb
@@ -2,9 +2,11 @@
   Language: <strong><%= @block.language.name %></strong>
 </p>
 
-<p>
-  <br /><pre><%= h @block.latest_revision.snippet %></pre>
-</p>
+<% unless @block.latest_revision.snippet.blank? %>
+  <p>
+    <br /><pre><%= h @block.latest_revision.snippet %></pre>
+  </p>
+<% end %>
 
 <% if @block.is_private %>
   <p>
